--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,10 +1,58 @@
 rss_feeds:
-  - url: http://feeds.bbci.co.uk/news/rss.xml
-    name: BBC
-  - url: https://wiadomosci.onet.pl/feed
-    name: Onet
-  - url: https://www.france24.com/en/rss
-    name: France24
+  - url: https://oko.press/feed
+    name: Oko Press
+    category: poland
+  - url: https://krytykapolityczna.pl/feed/
+    name: Krytyka Polityczna
+    category: poland
+  - url: https://wyborcza.pl/pub/rss/najnowsze_wyborcza.xml
+    name: Gazeta Wyborcza
+    category: poland
+  - url: https://www.tvp.info/tvp.info/rss+xml.php
+    name: TVP Info
+    category: poland
+  - url: https://www.rp.pl/rss_main
+    name: Rzeczpospolita
+    category: poland
+  - url: https://www.newsweek.pl/.feed
+    name: Newsweek Polska
+    category: poland
+  - url: https://rss.nytimes.com/services/xml/rss/nyt/HomePage.xml
+    name: New York Times
+    category: usa
+  - url: https://www.washingtonpost.com/arcio/rss/category/politics/?itid=lk_inline_manual_2
+    name: Washington Post Politics
+    category: usa
+  - url: http://rss.cnn.com/rss/edition.rss
+    name: CNN
+    category: usa
+  - url: https://feeds.npr.org/1001/rss.xml
+    name: NPR News
+    category: usa
+  - url: https://feeds.npr.org/1002/rss.xml
+    name: NPR World
+    category: usa
+  - url: https://news.google.com/rss/search?q=site%3Areuters.com&hl=en-US&gl=US&ceid=US%3Aen
+    name: Reuters
+    category: usa
+  - url: https://apnews.com/index.rss
+    name: Associated Press
+    category: usa
+  - url: https://www.pravda.com.ua/rss/
+    name: Ukrainska Pravda
+    category: ukraine
+  - url: https://assets.censor.net/rss/censor.net/rss_uk_news.xml
+    name: Censor.NET
+    category: ukraine
+  - url: https://feeds.nos.nl/nosnieuwsalgemeen
+    name: NOS Nieuws
+    category: netherlands
+  - url: https://www.nrc.nl/rss/
+    name: NRC
+    category: netherlands
+  - url: https://www.volkskrant.nl/voorpagina/rss.xml
+    name: de Volkskrant
+    category: netherlands
 
 recipients:
   - johnsmith@gmail.com
