--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,6 @@ GMAIL_SENDER=
 # Gmail App Password (generate at myaccount.google.com/apppasswords)
 GMAIL_APP_PASSWORD=
 
-# Optional: LibreTranslate URL if fallback (self-host or public free instance)
-LIBRETRANSLATE_URL=
+# Recipients (kept private). Comma-separated list only.
+# Example: RECIPIENTS=alice@example.com,bob@example.com
+RECIPIENTS=
